syntax = "proto3";

import "google/protobuf/any.proto";

package doodle;

message user_database{
  uint64 id = 1;
  string uuidPath = 2;
  string user_name = 3;
  google.protobuf.Any userdata_cereal = 4;
  uint64 permission_group = 5;
}

message user_database_filter{
  uint64 id = 1;
  string uuidPath = 2;
  string user_name = 3;
  uint64 permission_group = 5;
}
